Move constraint to additional params

--- a/hydra_plugins/jz_hydra_submitit_launcher/hydra/launcher/base.yaml
+++ b/hydra_plugins/jz_hydra_submitit_launcher/hydra/launcher/base.yaml
@@ -13,5 +13,6 @@ additional_parameters:
   distribution: "block:block"
   hint: nomultithread
   time: "${hours}:00:00"
+  constrain: ${constraint}
 setup:
-  - "#SBATCH -C ${constraint}"
+  - "#SBATCH"
