Add partition arg to base

--- a/hydra_plugins/jz_hydra_submitit_launcher/hydra/launcher/base.yaml
+++ b/hydra_plugins/jz_hydra_submitit_launcher/hydra/launcher/base.yaml
@@ -14,5 +14,6 @@ additional_parameters:
   hint: nomultithread
   time: "${hours}:00:00"
   constraint: ${constraint}
+  partition: ${partition}
 setup:
   - "#SBATCH"
